--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,20 +2,24 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
 jobs:
- create_infrastructure: 
+ configure_infrastructure: 
     docker:
-      - image: amazon/aws-cli
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - add_ssh_keys:
+      		# You can get this ID in the section where you registered the SSH Key
+          	fingerprints: ["c9:83:3a:4f:9f:73:b7:2b:b0:94:70:61:fc:98:ae:ea"] 
       - run:
-          name: Create Cloudformation Stack
+          name: Install Ansible
           command: |
-            aws cloudformation deploy \
-              --template-file template.yml \
-              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-              --region us-east-1
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+           ansible-playbook -i inventory.txt main.yml
 
 workflows:
   myWorkflow:
     jobs:
-      - create_infrastructure
+      - configure_infrastructure
