--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,7 @@
  - name: Exercise for setting up a web server in an EC 
    # hosts: ubuntu
    # Use the public IP if the VM is already created
-   hosts: All
+   hosts: 54.236.4.255
    user: ubuntu
    become: true
    become_method: sudo
