--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
          root: ~/
          paths: 
            - textfile.txt 
-
+  
   promote_to_production:
    docker:
      - image: amazon/aws-cli
@@ -75,6 +75,22 @@ jobs:
            --template-file cloudfront.yml \
            --stack-name production-distro \
            --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
+  
+  clean_up_old_front_end:
+   docker:
+     - image: amazon/aws-cli
+   steps:
+     - checkout
+     - run: yum install -y tar gzip
+     - attach_workspace:
+        at: ~/
+     - run:
+         name: Destroy the previous S3 bucket and CloudFormation stack. 
+         # Use $OldBucketID environment variable or mybucket644752792305 below.
+         # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
+         command: |
+           export OldBucketID=$(cat ~/textfile.txt)
+           aws s3 rm "s3://${OldBucketID}" --recursive
 
 workflows:
   myWorkflow:
