--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,19 +78,22 @@ jobs:
   
   clean_up_old_front_end:
     docker:
-      - image: amazon/aws-cli
+    - image: amazon/aws-cli
     steps:
       - checkout
       - run: yum install -y tar gzip
       - attach_workspace:
-        at: ~/
-     - run:
-         name: Destroy the previous S3 bucket and CloudFormation stack. 
-         # Use $OldBucketID environment variable or mybucket644752792305 below.
-         # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
-         command: |
-           export OldBucketID=$(cat ~/textfile.txt)
-           aws s3 rm "s3://${OldBucketID}" --recursive
+          at: ~/
+      - run:
+          name: Destroy the previous production version's S3 bucket and CloudFormation stack. 
+          # Use $OldBucketID environment variable or mybucket644752792305 below.
+          # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
+          command: |
+            export OldBucketID=$(cat ~/textfile.txt)
+            aws s3 rm "s3://${OldBucketID}" --recursive
+          #  aws cloudformation delete-stack --stack-name production-distro 
+          #  aws cloudformation delete-stack --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7}
+          #  aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 
 workflows:
   myWorkflow:
