--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,15 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
 orbs:
+  # Choose either one of the orbs below
+  # Declare a dependency on the welcome-orb
+  # welcome: circleci/welcome-orb@0.4.1
+  aws-cli: circleci/aws-cli@2.0.3
+# Orchestrate or schedule a set of jobs
+
 commands:
+  # Exercise - Rollback
   destroy_environment:
     steps:
       - run:
@@ -11,56 +19,65 @@ commands:
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
+          
+
 
 jobs:
   create_and_deploy_front_end:
     docker:
-     - image: amazon/aws-cli
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run:
-         name: Execute bucket.yml - Create Cloudformation Stack
-         command: |
-           aws cloudformation deploy \
-           --template-file bucket.yml \
-           --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
-           --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
-     # Uncomment the step below if yoou wish to upload all contents of the current directory to the S3 bucket
-      - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
-
-  get_last_deployment_id:
-   docker:
-     - image: amazon/aws-cli
-   steps:
-     - checkout
-     - run: yum install -y tar gzip
-     - run:
-         name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
-         command: |
-           aws cloudformation \
-           list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
-           --no-paginate --output text > ~/textfile.txt
-     - persist_to_workspace:
-         root: ~/
-         paths: 
-           - textfile.txt 
+          name: Execute bucket.yml - Create Cloudformation Stack
+          command: |
+            aws cloudformation deploy \
+            --template-file bucket.yml \
+            --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7} \
+            --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
+      # Uncomment the step below if you wish to upload all contents of the current directory to the S3 bucket
+      # - run: aws s3 sync . s3://mybucket-${CIRCLE_WORKFLOW_ID:0:7} --delete
   
+  # Exercise: Promote to Production - Job 2
+  # Fetch and save the pipeline ID (bucket ID) responsible for the last release.
+  get_last_deployment_id:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: yum install -y tar gzip
+      - run:
+          name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
+          command: |
+            aws cloudformation \
+            list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
+            --no-paginate --output text > ~/textfile.txt
+      - persist_to_workspace:
+          root: ~/
+          paths: 
+            - textfile.txt 
+  
+  # Exercise: Promote to Production - Job 3
+  # Executes the cloudfront.yml template that will modify the existing CloudFront Distribution, change its target from the old bucket to the new bucket - `mybucket-${CIRCLE_WORKFLOW_ID:0:7}`. 
+  # Notice here we use the stack name `production-distro` which is the same name we used while deploying to the S3 bucket manually.
   promote_to_production:
     docker:
-     - image: amazon/aws-cli
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run:
           name: Execute cloudfront.yml
           command: |
-           aws cloudformation deploy \
-           --template-file cloudfront.yml \
-           --stack-name production-distro \
-           --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
-  
+            aws cloudformation deploy \
+            --template-file cloudfront.yml \
+            --stack-name production-distro \
+            --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}" 
+
+  # Exercise: Promote to Production - Job 4
+  # Destroy the previous production version's S3 bucket and CloudFormation stack. 
   clean_up_old_front_end:
     docker:
-    - image: amazon/aws-cli
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run: yum install -y tar gzip
@@ -77,8 +94,12 @@ jobs:
           #  aws cloudformation delete-stack --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7}
           #  aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 
+
+
 workflows:
-  myWorkflow:
+  # Name the workflow "welcome"
+  my_workflow:
+    # Run the welcome/run job in its own container
     jobs:
       - create_and_deploy_front_end
       - promote_to_production:
