--- a/bucket.yml
+++ b/bucket.yml
@@ -25,3 +25,7 @@ Resources:
           Principal: '*'
           Action: s3:GetObject
           Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
+
+  OwnershipControls:
+    Rules:
+      - ObjectOwnership: BucketOwnerPreferred
