--- a/bucket.yml
+++ b/bucket.yml
@@ -32,4 +32,4 @@ Resources:
           Effect: Allow
           Principal: '*'
           Action: s3:GetObject
-          Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
+          Resource: !Sub ${WebsiteBucket.Arn}/*
